Closure_99/evosuite/fixing/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_99_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_99/Closure/evosuite/1/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_99/Closure/evosuite/1/com/google/javascript/jscomp/CheckGlobalThis_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_99/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_99/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest_scaffolding.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_99/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:24: error: duplicate class: com.google.javascript.jscomp.CheckGlobalThis_ESTest
public class CheckGlobalThis_ESTest extends CheckGlobalThis_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_99/Closure/evosuite/0/com/google/javascript/jscomp/CheckGlobalThis_ESTest_scaffolding.java:18: error: duplicate class: com.google.javascript.jscomp.CheckGlobalThis_ESTest_scaffolding
public class CheckGlobalThis_ESTest_scaffolding {
       ^
2 errors
